@@ -1,4 +1,10 @@
-﻿shmuel 04.05.2014 11:24:24 +0200 - build 327
+﻿shmuel 05.05.2014 15:24:35 +0200 - build 328
+
+1. Force MoonScript to load lpeg.dll residing in %farhome%.
+
+2. M#2388: При ошибках сообщения системы на русском могут не отображаться.
+
+shmuel 04.05.2014 11:24:24 +0200 - build 327
 
 1. LuaFAR: ряд функций приведен в соответствие с документацией в отношении их возвращаемых значений.
    Эти функции могли возвращать 0 значений, тогда как по документации должны были возвращать nil или false.
